--- a/conf.env
+++ b/conf.env
@@ -1,4 +1,5 @@
 ENVIROMENT=devel
+RABBIT_URL=amqp://guest:guest@localhost
 # HTTP_ADDRESS_STRING=:8080
 # AUTH_SERVICE=http://auth:8080
 # LOG_SERVICE=http://logger:8080
